# algorithms

./: build.gradle.kts  pyproject.toml  settings.gradle.kts
algo/: palindrome.py  semaphore.py  two_sums.py
algorithms/: add_two_numbers.py  anagram.py  atm.py
src/main/kotlin/: Main.kt  anagram.kt  atm.kt  capitalize.kt  descendingList.kt  findAverage.kt  findGreater.kt  inverter.kt  nonRepeatedWords.kt  palidrome.kt  phraseInverter.kt  recursiveExponentiation.kt  recursiveFactorial.kt
src/test/kotlin/: AnagramKtTest.kt  DescendingListKtTest.kt  FindAverageKtTest.kt  FindGreaterKtTest.kt  InverterKtTest.kt  PalidromeKtTest.kt
tests/: test_add_two_numbers.py  test_anagram.py  test_atm.py  test_palindrome.py  test_two_sums.py
